added sources of = sign in field and LVC assignments